// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateItem component DateItem snapshot test should render correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Medium",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        Object {
          "color": "white",
        },
      ]
    }
  >
    Today
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Roboto-Medium",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          Object {
            "color": "white",
          },
        ]
      }
    >
       • 
      22 Apr
    </Text>
  </Text>
  <View
    style={
      Object {
        "marginLeft": "auto",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#091540",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 16,
              "minWidth": 16,
              "paddingHorizontal": 4,
              "paddingVertical": 2,
            },
            Object {
              "borderColor": "#8A94A6",
              "borderWidth": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#04142F",
                "fontFamily": "Roboto-Medium",
                "fontSize": 12,
                "letterSpacing": 0.48,
                "lineHeight": 12,
              },
              Object {
                "color": "#8A94A6",
              },
              undefined,
            ]
          }
        >
          1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`DateItem component DateItem snapshot test should render correctly 2`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Medium",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        Object {
          "color": "white",
        },
      ]
    }
  >
    Custom date
  </Text>
  <View
    style={
      Object {
        "marginLeft": "auto",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#091540",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 16,
              "minWidth": 16,
              "paddingHorizontal": 4,
              "paddingVertical": 2,
            },
            Object {
              "borderColor": "#8A94A6",
              "borderWidth": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#04142F",
                "fontFamily": "Roboto-Medium",
                "fontSize": 12,
                "letterSpacing": 0.48,
                "lineHeight": 12,
              },
              Object {
                "color": "#8A94A6",
              },
              undefined,
            ]
          }
        >
          Q
        </Text>
      </View>
    </View>
  </View>
</View>
`;
